tests/agl/rejections/scope/exception_name_claimed_by_let.agl
exception Boom extends Exception
  code: int

let Boom = 1
print Boom
